added few changes

--- a/templates/clasify.html
+++ b/templates/clasify.html
@@ -31,8 +31,9 @@
   </style>
   {% if(data[0] == 1) %}
   <h4>We found you that you are</h4>
-  <h1 class="depp">Depressed</h1>
+  <h1 class="depp">Depressed 😣</h1>
 
+  <center style="margin-top: 50px;"><a href="/suggations" class="btn btn-primary">Recovery suggations</a></center>
   <div class="videos">
     <h5>Don't worry we got some motivation for you</h5>
     <div class="row">
@@ -88,10 +89,10 @@
   </div>
   {% else %}
   <h4>We found you that you are</h4>
-  <h1 class="ndepp">Not Depressed</h1>
+  <h1 class="ndepp">Not Depressed 😃</h1>
 
   <div class="videos">
-    <h5>You just need some motivation for you here you can get it</h5>
+    <h5>You just need some motivation for you. Here, you can get it</h5>
     <div class="row">
       <div class="col-md-6">
         <div class="youtube">
