added few changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </style>
 
     <div class="text">
-        <h4><p>80% of youth commit sucide due to depression <br> Detect depreession early and overcome depression</p></h4>
+        <h4><p>80% of youth commit sucide due to depression <br> Detect depression early and overcome depression</p></h4>
         <a href="/home" class="btn btn-primary">Detect depressed</a>
     </div>
     
