--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Depression classifier web page</title>
+    <title>Detect Depression</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <style>
@@ -27,7 +27,7 @@
         margin-bottom: 15px;
     }
 </style>
-    <h1>Depression classification</h1>
+    <h1>Detect Depression</h1>
     <div class="form">
         <form action="/clasify" method="post">
             <div class="form-group">
